[package]
name = "evar"
version = "0.1.1"
authors = ["enklht <enklht@gmail.com>"]
edition = "2024"
repository = "https://github.com/enklht/seva"
description = "Modern ergonomic math calculator inspired by eva"
readme = "./readme.md"
keywords = ["calculator", "repl", "math", "cli", "bc"]
categories = ["command-line-interface", "science", "mathematics"]
license = "MIT"

[dependencies]
chumsky = { version = "0.10.0", default-features = false, features = ["std"] }
clap = { version = "4.5.36", features = ["derive"] }
codespan-reporting = "0.12.0"
colored = "3.0.0"
directories = "6.0.0"
logos = "0.15.0"
rustyline = { version = "15.0.0", features = ["derive"] }
thiserror = "2.0.12"
